crates/tokmd-tool-schema/tests/snapshots/snapshots__snapshot_clap_format.snap
---
source: crates/tokmd-tool-schema/tests/snapshots.rs
assertion_line: 105
expression: rendered
---
{
  "schema_version": 1,
  "name": "example",
  "version": "3.5.0",
  "description": "Example CLI for snapshot testing",
  "tools": [
    {
      "name": "example",
      "description": "Example CLI for snapshot testing",
      "parameters": []
    },
    {
      "name": "analyze",
      "description": "Run analysis on input",
      "parameters": [
        {
          "name": "input",
          "description": "Path to the input file",
          "type": "string",
          "required": true
        },
        {
          "name": "preset",
          "description": "Analysis preset",
          "type": "string",
          "required": false,
          "default": "quick",
          "enum_values": [
            "quick",
            "deep",
            "full"
          ]
        },
        {
          "name": "dry-run",
          "description": "Run without side effects",
          "type": "boolean",
          "required": false
        },
        {
          "name": "verbosity",
          "description": "Increase verbosity",
          "type": "integer",
          "required": false
        },
        {
          "name": "tags",
          "description": "Tags to attach",
          "type": "array",
          "required": false
        }
      ]
    },
    {
      "name": "export",
      "description": "Export results",
      "parameters": [
        {
          "name": "output",
          "description": "Output path",
          "type": "string",
          "required": true
        },
        {
          "name": "format",
          "description": "Export format",
          "type": "string",
          "required": false,
          "default": "json",
          "enum_values": [
            "json",
            "csv"
          ]
        }
      ]
    }
  ]
}
