crates/tokmd-tool-schema/tests/snapshots/snapshots__snapshot_minimal_cmd_jsonschema.snap
---
source: crates/tokmd-tool-schema/tests/snapshots.rs
assertion_line: 115
expression: rendered
---
{
  "$schema": "https://json-schema.org/draft-07/schema#",
  "description": "Bare CLI",
  "name": "bare",
  "schema_version": 1,
  "tools": [
    {
      "description": "Bare CLI",
      "name": "bare",
      "parameters": {
        "properties": {},
        "required": [],
        "type": "object"
      }
    }
  ],
  "version": "0.0.1"
}
