crates/tokmd-tool-schema/tests/snapshots/snapshots__snapshot_openai_format.snap
---
source: crates/tokmd-tool-schema/tests/snapshots.rs
assertion_line: 78
expression: rendered
---
{
  "functions": [
    {
      "description": "Example CLI for snapshot testing",
      "name": "example",
      "parameters": {
        "properties": {},
        "required": [],
        "type": "object"
      }
    },
    {
      "description": "Run analysis on input",
      "name": "analyze",
      "parameters": {
        "properties": {
          "dry-run": {
            "description": "Run without side effects",
            "type": "boolean"
          },
          "input": {
            "description": "Path to the input file",
            "type": "string"
          },
          "preset": {
            "description": "Analysis preset",
            "enum": [
              "quick",
              "deep",
              "full"
            ],
            "type": "string"
          },
          "tags": {
            "description": "Tags to attach",
            "type": "array"
          },
          "verbosity": {
            "description": "Increase verbosity",
            "type": "integer"
          }
        },
        "required": [
          "input"
        ],
        "type": "object"
      }
    },
    {
      "description": "Export results",
      "name": "export",
      "parameters": {
        "properties": {
          "format": {
            "description": "Export format",
            "enum": [
              "json",
              "csv"
            ],
            "type": "string"
          },
          "output": {
            "description": "Output path",
            "type": "string"
          }
        },
        "required": [
          "output"
        ],
        "type": "object"
      }
    }
  ]
}
