crates/tokmd-tool-schema/tests/snapshots/snapshots__snapshot_single_boolean_param_openai.snap
---
source: crates/tokmd-tool-schema/tests/snapshots.rs
assertion_line: 133
expression: rendered
---
{
  "functions": [
    {
      "description": "Only a flag",
      "name": "flag-only",
      "parameters": {
        "properties": {
          "enable": {
            "description": "Enable the feature",
            "type": "boolean"
          }
        },
        "required": [],
        "type": "object"
      }
    }
  ]
}
